 * ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
 * WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
 * ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 * OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 * 
 * $Id$
 */
 
TreeTank 4.19
-------------
 5 Fixed critical bug in TypedValue.atomize().
 4 Fixed critical bug in SAXGenerator emitting end elements too early.
 3 Renamed getRevisionSize() to getNodeCount() which is more expressive.
 2 Introduced transaction ID. This allows to close all open transactions during
   ISession.close().
 1 Fixed bug with NestedAxis.
 0 Local part and prefix are no longer stored separately but as qualified name.
   Binary incompatibility with 4.18.
 
TreeTank 4.18
-------------
11 Added var arg to FilterAxis to allow for multiple filters.
10 Fixed bug with cursor moving to attributes.
 9 SAXHandler now able to insert subtrees into an existing treetank.
 8 SAXGenerator now only accepting IReadTransaction. It will allways perform
   a descendant-or self step on the currently selected node.
 7 Include self option for ancestor and descendant axis.
 6 Fixed bug with auto commit being triggered too often.
 5 Reduced size of node and indirect pages to better support updates.
 4 Added convenience methods to IReadTransaction and IWriteTransaction to
   access typed values.
 3 Moved KEY, KIND, and TYPE constants to IReadTransaction.
 2 Renamed UTF to TypedValue. Use TypedValue.atomize() to get the String
   representation whatever type it is.
 1 Binary incompatibility with 4.17.
 0 Introducing value types to provide basic support for XMLSchema and XPath 2.0.
   This can, e.g., also be used to efficiently store an int instead of a
   String.
 
TreeTank 4.17
-------------
11 ISession now accepts maximum number of node modifications or elapsed
   seconds before auto commit. Auto commit must now be activated by 